Changed the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css"/>
-<title> Test gitHub </title>
+<title> Test gitHub Data Analyst </title>
 <meta charset="UTF-8">
 </head>
 
