--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1> Welcome in my test </h1>
 <p> This is a test github</p>
-<h2> Data Analyst </h2>
+<h2> Data Analyst in Bordeaux </h2>
 <p> Enjoy! </p> 
 </body> 
 </html>
